# python-mcp

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  service.sh  start-python.sh
client/: .env.development  .env.production  .gitignore  .oxfmtrc.json  README.md  auto-imports.d.ts  components.d.ts  electron-builder.yml  electron.vite.config.ts  oxlintrc.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vue.config.js
client/public/: audio-processor.worklet.js
client/resources/: icon.icns
client/src/: App.vue  main.ts
client/src/components/: Index.vue  index.vue
client/src/main/: index.ts
client/src/plugins/: index.ts
client/src/preload/: index.d.ts  index.ts
client/src/router/: index.ts
data/: .config.yaml
manager-api-elysia/: .env.example  README.md  package.json  server.ts  tsconfig.json
manager-api-elysia/drizzle/: 0000_sturdy_eternals.sql
manager-api-elysia/src/: index.ts
pids/: python-server.pid
server/: .env.example  .gitignore  README.md  __init__.py  config.yaml  docker-compose.yml  http_server.py  package.json  run.sh  tsconfig.json  types.py  websocket_server.py
server/config/: __init__.py  loader.py  logger.py
server/core/: connection.py
server/performance_tester/: performance_tester_stream_asr.py
server/prompts/: roles.json
server/providers/: __init__.py
server/src/: config.ts  features.test.ts  index.test.ts  index.ts  middleware.ts  providers.ts  router.ts  websocket.ts
server/test/: .config.yaml  test_page.html
(+190 files in other folders)
